--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,14 +9,11 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
-
+    permissions: write-all
     runs-on: ubuntu-latest
 
     steps:
